# gcmi

./: .gitignore  AGENTS.md  FUNCTIONALITY.md  MATLAB_BUILD_CLEANUP_SPEC.md  MATLAB_CPP_REWRITE_BACKLOG.md  MATLAB_CPP_REWRITE_SPEC.md  PYTHON_OPTIMIZED_IMPLEMENTATION_BACKLOG.md  PYTHON_OPTIMIZED_IMPLEMENTATION_SPEC.md  README.md  buildfile.m  setup_gcmi.m
.github/workflows/: ci.yml  matlab-release.yml
benchmarks/: EXPECTED_OUTPUTS.md  README.md  cpp_mex_default_function_map.m  environment_schema.json  fixtures_manifest.json  results_schema.json  run_matlab_benchmarks.m  run_python_benchmarks.py
matlab/: Contents.m  bias_cmi_ggg_bits.m  bias_ent_g_bits.m  bias_mi_gd_bits.m  bias_mi_gg_bits.m  cmi_ggg.m  cmi_ggg_vec.m  ent_g.m  gccmi_ccc.m  gccmi_ccd.m  gcmi_mixture_cd.m  gcmi_model_cd.m  gcmi_version.m  maxstar.m  mi_gg.m  mi_gg_vec.m  mi_mixture_gd.m  mi_mixture_gd_vec.m  mi_model_gd.m  mi_model_gd_vec.m  validate_discrete_labels.m  vecchol.m
matlab/cpp_mex/: README.md
matlab/cpp_mex/include/: gcmi_kernels.hpp  gcmi_mex_adapter_utils.hpp  gcmi_mex_utils.hpp
matlab/cpp_mex/mex/: copnorm_slice_cpp.cpp  gcmi_cpp_blas_probe.cpp  gcmi_cpp_omp_probe.cpp  gcmi_cpp_ping.cpp  gcmi_cpp_runtime_probe.cpp  info_cc_slice_cpp.cpp  info_cc_slice_cpp_capi.c  info_cd_slice_cpp.cpp
matlab/cpp_mex/src/: copnorm_kernel.cpp  gcmi_kernels.cpp  info_cc_slice_bridge.cpp
matlab/cpp_mex/tests/: run_gcmi_cpp_mex_smoke_tests.m
matlab/cpp_mex/tooling/: gcmi_cpp_mex_clean.m  gcmi_cpp_mex_compile.m  gcmi_cpp_mex_config.m  gcmi_cpp_mex_package.m  gcmi_cpp_mex_test.m
matlab/tests/: Contents.m  run_gcmi_regression_tests.m
matlab_examples/: README.md  continuous_meg.m  cpp_continuous_native.m  cpp_discrete_native.m  discrete_eeg.m  eeg_temporal_interaction.m
plans/: MATLAB_BUILD_CLEANUP_BACKLOG.md
python/: build_backend.py  gcmi.py  pyproject.toml
python/src/gcmi/: __init__.py  _core.py  _dispatch.py  _numba.py  _version.py
python/tests/: test_batch_kernels.py  test_gcmi.py
