[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "gcmi"
version = "0.5.0"
description = "Gaussian-copula mutual information estimators"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
]

[project.optional-dependencies]
opt = ["numba>=0.64.0"]
bench = ["matplotlib>=3.10.8", "numba>=0.64.0", "pyperf>=2.10.0"]
matlab = ["scipy>=1.15.3"]
test = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/gcmi"]
[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "error::DeprecationWarning",
  "error::PendingDeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
